--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - /app/node_modules
     environment:
       - MONGO_URI=mongodb://mongo:27017/armonica
+    env_file:
+      - .env
     depends_on:
       - mongo
     command: nodemon src/app.js
